# json-quick

./: CHANGELOG.md  LICENSE  README.md  json-quick.cabal
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.md
main/: Main.hs
src/: CLI.hs  FailList.hs  Main.hs  Parse.hs  ParseUtilities.hs  Prettify.hs  Select.hs  Verify.hs
tests/: Main.hs  PrettifyTests.hs  SelectTests.hs  VerifyTests.hs
