cabal-version:       2.4

name:                json-quick
version:             0.3.0.0
synopsis:            A fast command-line utility for dealing with JSON
homepage:            https://github.com/thomasebsmith/json-quick
bug-reports:         https://github.com/thomasebsmith/json-quick/issues
license:             MIT
license-file:        LICENSE
author:              Thomas Smith
maintainer:          thsm@umich.edu
extra-source-files:  CHANGELOG.md

executable json-quick
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0, bytestring, containers, transformers
  other-modules:       CLI, FailList, Parse, Paths_json_quick, Prettify, Verify
  hs-source-dirs:      src
  default-language:    Haskell2010
