cabal-version:       2.4

name:                json-quick
version:             0.6.0.0
synopsis:            A fast command-line utility for dealing with JSON
homepage:            https://github.com/thomasebsmith/json-quick
bug-reports:         https://github.com/thomasebsmith/json-quick/issues
license:             MIT
license-file:        LICENSE
author:              Thomas Smith
maintainer:          thsm@umich.edu
extra-source-files:  CHANGELOG.md

library
  build-depends:       base ^>=4.13.0.0, bytestring, containers, transformers
  exposed-modules:     CLI, FailList, Parse, ParseUtilities, Prettify,
                       Select, Verify
  other-modules:       Paths_json_quick
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -Wincomplete-uni-patterns

executable json-quick
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0, json-quick
  hs-source-dirs:      main
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -Wincomplete-uni-patterns

test-suite json-quick-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0, bytestring, hspec, json-quick
  other-modules:       PrettifyTests, SelectTests, VerifyTests
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -Wincomplete-uni-patterns
